# ocius

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conandata.yml  main.cpp
math/spreadsheets/: vector_addition.xlsx
